fixed my worked background bleed

--- a/index.css
+++ b/index.css
@@ -381,6 +381,7 @@ header {
 .portfolio {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    margin-top: 20px;
 }
 
 .portfolio__item {
@@ -392,6 +393,8 @@ header {
     transition:
      transform 750ms cubic-bezier(.5,0,.5,1),
     opacity 250ms linear;
+    max-height: 100%;
+    height: 345px;
     
     
 }
